Mon Aug 18 11:48:51 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (convert_to_format): 
	Add a fallback for unaligned source data for
	FORMAT_ARGB_MASK. (#117217)

Mon Aug 18 10:51:57 2003  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Rework handling of REBUILD_PNGS,
	so that we also don't try to REBUILD_PNGS when
	cross-compiling and there is no gdk-pixbuf-csource.
	But give an error if gtk/stock-icons/gtkstockpixbufs.h
	is not in the source tree. (Note that REBUILDS_PNG
	was set backwards before, which is why you always
	had to manually recreate gtkstockpixbufs.h!)

Mon Aug 18 10:19:55 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk+-2.0-uninstalled.pc.in: Add a missing gtk/ in the
	path to libgtk.la. (#120080, Benedikt Spranger)

Sat Aug 16 10:34:49 2003  Owen Taylor  <otaylor@redhat.com>

	* modules/input/imcedilla.c: Make the list of default
	languages more comprehensive. (Suggestion of
	Fco. Javier F. Serrador)

Sat Aug  9 12:47:11 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c (gdk_arg_context_parse): Fix broken 
	parentheses when skipping args.

Sat Aug 16 16:22:23 2003  Kristian Rietveld  <kris@gtk.org>

	Fix major bug in row ref handling, so the new combo box
	will actually work right (:. Bug #107748. Patch written
	with help from Tim Janik.

	The basic idea is to update the row refs in a closure,
	before the actual signal is emitted (rather than having
	the model connect signal handlers).

	* gtk/gtktreemodel.c (gtk_tree_model_base_init): change
	g_signal_new calls for row_inserted, row_deleted and
	rows_reordered to use the new marshallers,
	(row_inserted_marshall), (row_deleted_marshall),
	(rows_reordered_marshall): the new marshallers,
	(gtk_tree_row_ref_inserted_callback): renamed to
	gtk_tree_row_ref_inserted since it isn't a callback
	anymore and gets called by the marshaller now,
	(gtk_tree_row_ref_deleted_callback): likewise,
	(gtk_tree_row_ref_reordered_callback): likewise,